// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component should render with default props 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 700;
  color: inherit;
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  text-align: center;
  width: 30px;
  height: 30px;
  line-height: 30px;
  border-radius: 50%;
  overflow: hidden;
  color: #fafafa;
  background: #bdbdbd;
}

.c0 .c1 {
  font-size: 16px;
}

.c0 img {
  width: 30px;
  height: 30px;
  object-fit: cover;
}

<div>
  <div
    class="c0"
    font-size="16px"
  >
    <strong
      class="c1 c2"
    >
      M
    </strong>
  </div>
</div>
`;

exports[`Avatar component should render with size 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 700;
  color: inherit;
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  text-align: center;
  width: 60px;
  height: 60px;
  line-height: 60px;
  border-radius: 50%;
  overflow: hidden;
  color: #fafafa;
  background: #bdbdbd;
}

.c0 .c1 {
  font-size: 24px;
}

.c0 img {
  width: 60px;
  height: 60px;
  object-fit: cover;
}

<div>
  <div
    class="c0"
    font-size="24px"
  >
    <strong
      class="c1 c2"
    >
      M
    </strong>
  </div>
</div>
`;

exports[`Avatar component should render with size and image 1`] = `
.c0 {
  display: inline-block;
  text-align: center;
  width: 120px;
  height: 120px;
  line-height: 120px;
  border-radius: 50%;
  overflow: hidden;
  color: #fafafa;
  background: #bdbdbd;
}

.c0 .sc-AykKC {
  font-size: 56px;
}

.c0 img {
  width: 120px;
  height: 120px;
  object-fit: cover;
}

<div>
  <div
    class="c0"
    font-size="56px"
  >
    <img
      src="http://dummurl"
    />
  </div>
</div>
`;
